# high_level_planning

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE  README.md  create_zip.zsh  envfile
highlevel_planning_ros/: CMakeLists.txt  README.md  install_requirements.sh  package.xml  requirements.txt  setup.py
highlevel_planning_ros/config/: main.yaml  main_pddl_bm.yaml
highlevel_planning_ros/data/hierarchical_domains/childsnack/: domain.hddl  p01.hddl  p01_small.hddl
highlevel_planning_ros/data/hierarchical_domains/rover/: domain_u.hddl  domain_v.hddl  domain_w.hddl  p01.hddl  p02.hddl  p03.hddl
highlevel_planning_ros/data/models/: box_panda_hand.urdf.xacro  common.xacro  parse_xacros.bash  tall_box.urdf
highlevel_planning_ros/data/models/container/: container_no_lid.urdf.xacro  container_sliding_lid.urdf.xacro  lid.urdf.xacro
highlevel_planning_ros/data/models/cupboard2/: drawer.stl
highlevel_planning_ros/data/models/shelf/: shelf.urdf.xacro
highlevel_planning_ros/data/models/table/: table.urdf
highlevel_planning_ros/launch/: view_robot.launch
highlevel_planning_ros/models/: box_panda_hand.urdf.xacro  clean_xacros.bash  parse_xacros.bash  tall_box.urdf
highlevel_planning_ros/models/container/: container_no_lid.urdf.xacro  lid.urdf.xacro
highlevel_planning_ros/models/cupboard2/: corpus.stl  cupboard2.urdf.xacro
highlevel_planning_ros/scripts/: run_auto.py  run_mcts.py  run_pddl_benchmark_mcts.py  run_pddl_benchmark_ours.py
highlevel_planning_ros/src/highlevel_planning_py/execution/: condition_check.py  custom_chooser.py  es.py  (+2 more)
(+35 files in other folders)
